--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.lqrl.school"
-        minSdk 24
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation files('libs/json-20240303.jar')
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
