--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
 }
 
 dependencies {
+    def fragment_version = "1.7.1"
+    // Java language implementation
+    implementation "androidx.fragment:fragment:$fragment_version"
     implementation files('libs/json-20240303.jar')
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation "androidx.cardview:cardview:1.0.0"
