Lesson adapter. View & refresh lessons list. Layouts. Major fixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CoursesActivity">
+        <activity android:name=".HomeActivity">
             <!-- Add any additional configurations for CoursesActivity here -->
         </activity>
 
