--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,24 @@
         android:theme="@style/Theme.LQRLMobile"
         tools:targetApi="31">
         <activity
-            android:name=".SignInSignUpActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity android:name=".HomeActivity">
             <!-- Add any additional configurations for CoursesActivity here -->
+        </activity>
+
+        <activity android:name=".SignUpActivity">
+
+        </activity>
+
+        <activity android:name=".ChangePasswordActivity">
+
         </activity>
 
     </application>
