--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,16 +12,16 @@ android {
     flavorDimensions "default"
     productFlavors {
         dev {
-            buildConfigField "String", "SERVER_IP4", "\"ip\""
-            buildConfigField "String", "SERVER_PORT", "\"port\""
-            buildConfigField "String", "SERVER_PORT", "\"ip:port\""
-            buildConfigField "String", "SERVER_ROOT", "\"http://ip:port\""
+            buildConfigField "String", "SERVER_IP4", "\"109.86.250.207\""
+            buildConfigField "String", "SERVER_PORT", "\"8080\""
+            buildConfigField "String", "SERVER_PORT", "\"109.86.250.207:8080\""
+            buildConfigField "String", "SERVER_ROOT", "\"http://109.86.250.207:8080\""
         }
         prod {
-            buildConfigField "String", "SERVER_IP4", "\"ip\""
-            buildConfigField "String", "SERVER_PORT", "\"port\""
-            buildConfigField "String", "SERVER_PORT", "\"ip:port\""
-            buildConfigField "String", "SERVER_ROOT", "\"http://ip:port\""
+            buildConfigField "String", "SERVER_IP4", "\"109.86.250.207\""
+            buildConfigField "String", "SERVER_PORT", "\"8080\""
+            buildConfigField "String", "SERVER_PORT", "\"109.86.250.207:8080\""
+            buildConfigField "String", "SERVER_ROOT", "\"http://109.86.250.207:8080\""
         }
     }
 
